@@ -50,6 +50,7 @@ documents those changes that are of interest to users and administrators.
  -- Remove unsafe usage of pthread_cancel in pmix plugin that can lead to
     to deadlock in glibc.
  -- Fix fatal in controller when loading completed trigger
+ -- Ignore reservation overlap at submission time.
 
 * Changes in Slurm 17.11.5
 ==========================
